--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <section>
         <div class="lista-tarefas">
             <h1>Lista de Tarefas</h1>
-            <input id="tarefa" type="text" placeholder="Adicione uma tarefa">
+          
+             type="text" placeholder="Adicione uma tarefa">
             <button id="adicionar">Adicionar</button>
             <ul id="tarefas">
                 <!--tarefas adicionadas -->
