--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <section>
         <div class="lista-tarefas">
             <h1>Lista de Tarefas</h1>
-          
-             type="text" placeholder="Adicione uma tarefa">
+            <input id="tarefa" type="text" placeholder="Adicione uma tarefa">
             <button id="adicionar">Adicionar</button>
             <ul id="tarefas">
                 <!--tarefas adicionadas -->
